--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="min-h-[100vh] w-full bg-gray-100 bg-cover relative  ">
     <!-- Header Section -->
   <header class="fixed w-full top-0 left-0 rounded-xl shadow-md z-50">
-    <div class="max-w-7xl mx-auto px-4 py-4 flex justify-between items-center">
+    <div class="max-w-[90%] mx-auto px-4 py-4 flex justify-between items-center">
       <!-- Logo -->
       <div class="">
         <img class="w-[200] h-[60px] " src="logo.png" alt="">
@@ -280,6 +280,7 @@
   
       <!-- Contact Information -->
       <div class="bg-white shadow-md rounded-lg p-6">
+        
         <h2 class="text-xl font-bold text-gray-800 mb-4">Contact Information</h2>
         <p class="text-gray-600 mb-6">Reach out to us directly through the details below:</p>
         <div class="space-y-4">
@@ -308,7 +309,7 @@
   
   
   <footer class="bg-gray-900 text-gray-200 py-10">
-    <div class="container mx-auto px-6 w-full ml-[300px] grid grid-cols-1 md:grid-cols-4 gap-8">
+    <div class="container mx-auto px-6 w-full 2xl:ml-[300px] md:ml-[170px] lg:ml-[180px]  grid grid-cols-1 md:grid-cols-4 gap-8">
       <!-- About Section -->
       <div>
         <h3 class="text-lg font-semibold mb-4">About Us</h3>
